# stwo

./: .gitignore  Cargo.toml
.github/workflows/: ci.yaml
crates/prover/: Cargo.toml
crates/prover/benches/: merkle.rs  pcs.rs
crates/prover/src/constraint_framework/: logup.rs  point.rs
crates/prover/src/core/: circle.rs  constraints.rs  fri.rs  mod.rs  queries.rs  test_utils.rs  utils.rs
crates/prover/src/core/backend/: mod.rs
crates/prover/src/core/backend/cpu/: mod.rs  quotients.rs  sha256.rs
crates/prover/src/core/backend/simd/: bit_reverse.rs  column.rs  grind.rs  mod.rs  qm31.rs  quotients.rs  sha256.rs
crates/prover/src/core/channel/: mod.rs  sha256.rs
crates/prover/src/core/fields/: qm31.rs
crates/prover/src/core/lookups/: sumcheck.rs
crates/prover/src/core/pcs/: mod.rs  prover.rs  quotients.rs  verifier.rs
crates/prover/src/core/prover/: mod.rs
crates/prover/src/core/vcs/: mod.rs  sha256_hash.rs  sha256_merkle.rs  test_utils.rs
crates/prover/src/examples/: mod.rs
crates/prover/src/examples/fibonacci/: air.rs  component.rs  mod.rs
crates/prover/src/examples/plonk/: mod.rs
crates/prover/src/trace_generation/: mod.rs  prove.rs
scripts/: clippy.sh
